inflect2: implement the speech API, and give the state a real lifetime
The port now answers SpeechModel, registers a ModelProvider so
Models.loadSpeech finds it without any consumer naming inflect2, and its state
owns or borrows its arena instead of always taking a GC-managed one.

State ownership is decided at CONSTRUCTION and never mutated, so `owned` is
final and there is no Cleaner - which is why this state can live in a native
image heap, the thing that blocked the BaseState treatment before. A dropped
unclosed state leaks its arena until exit; -Djinfer.leakDetection names the
line that dropped it.

Deleted, all of them footguns:

  Inflect2.newState()'s Arena.ofAuto()  scratch on a GC-managed arena is the
      pattern that OOM-killed the battery at 51GB - heap stays ~2% so the GC
      that would free it never runs
  Inflect2.synthesize(int[], ...)      minted a state per call
  InflectTTS.synthesize(String, ...)   same, and never closed it. A state is a
      LONG-LIVED object: minting one per utterance repays every sizing
      allocation and closes a shared arena, which is a JVM-wide handshake
  InflectOptions                       speed is generic and now lives on
      SpeechOptions; variation and seed are chosen once, so they became fluent
      re-wraps over the same weights - no reload, no arena, no copy
  -Dinflect.lexicon                    JVM-wide, so two models in one process
      could not differ
  Phonemizer.tryCreate()               replaced by one documented ladder

The lexicon ladder is now in one place and one order: the lexicon you named
(unreadable THROWS - naming a file and silently getting the fallback is the lie
it must not tell), the one beside the GGUF, the one on the classpath, then
espeak-ng, which announces itself, then a failure that names all four.

MAX_FRAMES gets a comment saying what it actually is: a DoS bound, not a
modelling constant. It caps one chunk at ~43s and every buffer sized off it,
and it is what stops adversaria